Prevent cell-border overlapping the overlays

--- a/src/css/handsontable.css
+++ b/src/css/handsontable.css
@@ -678,9 +678,6 @@ Cell borders
   -moz-box-shadow: 1px 1px 2px #bbb;
 }
 
-.htBorders div {
-  z-index: 999;
-}
 
 /* Grouping indicators */
 .handsontable colgroup col.rowHeader.htGroupCol {
